crates/parse/tests/snapshots/insta__ts-loop.snap
---
source: crates/parse/tests/insta.rs
expression: render(&case)
---
fixtures/golden/ts/for-of/pos-label-rows.ts
ts/for-of · quality=ok · lines=8

m1 p0 @site            form=for-of          for_in_statement       3:2-5:3 inError=false
m1 p0 @pick.1          form=for-of          array_pattern          3:13-3:25 inError=false
m1 p0 @pick.2          form=for-of          call_expression        3:29-3:51 inError=false
m1 p0 @pick.3          form=for-of          statement_block        3:53-5:3 inError=false
