crates/parse/tests/snapshots/insta__tsx-collection-bare-param.snap
---
source: crates/parse/tests/insta.rs
expression: render(&case)
---
fixtures/golden/tsx/array-map-immutable/pos-tag-row.tsx
ts/array-map-immutable · quality=ok · lines=5

m1 p0 @site            form=map             call_expression        2:16-2:78 inError=false
m1 p0 @pick.1          form=map             identifier             2:16-2:20 inError=false
m1 p0 @pick.3          form=map             property_identifier    2:21-2:24 inError=false
m1 p0 @hole            form=map             property_identifier    2:21-2:24 inError=false
m1 p0 @pick.2          form=map             arrow_function         2:25-2:77 inError=false
